# bollo

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
sql/: tables.sql
src/: main.cpp
src/core/: bakery.h  bollo.cpp  bollo.h  bollo_constants.cpp  bollo_constants.h  build.h  operations.cpp  operations.h
src/core/classes/: baker.cpp  baker.h  bakery.cpp  bakery.h  logbook.cpp  logbook.h  ministry.cpp  ministry.h  person.cpp  person.h  yeast.cpp  yeast.h
src/io/: handler.cpp  handler.h  http.cpp  http.h  production_updater.cpp  production_updater.h  settings.cpp  settings.h  sql.cpp  sql.h  teleBot.cpp  teleBot.h  telebot.cpp  telebot.h
src/logger/: easylogging++.h  logger.cpp  logger.h
src/ui/: about.cpp  about.h  assets.h  bakeryedit.cpp  bakeryedit.h  bakeryselect.cpp  bakeryselect.h  chartsbrowser.cpp  chartsbrowser.h  logbookdialog.cpp  logbookdialog.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  menuactionmanager.cpp  menuactionmanager.h  notifier.js  popup.cpp  popup.h  preferencespanel.cpp  preferencespanel.h  resources.qrc  selectpane.cpp  selectpane.h  telegramcpanel.cpp  telegramcpanel.h  themes.cpp  themes.h
src/ui/ui_forms/: about.ui  bakeryEdit.ui  bakeryselect.ui  chartsbrowser.ui  logbookdialog.ui  logindialog.ui  mainwindow.ui  popup.ui  preferencespanel.ui  selectpane.ui  telegramcpanel.ui
src/ui/ui_headers/: ui_about.h  ui_bakeryedit.h  ui_bakeryselect.h  ui_chartsBrowser.h  ui_logbookdialog.h  ui_logindialog.h  ui_mainwindow.h  ui_popup.h  ui_preferencespanel.h  ui_selectpane.h  ui_telegramcpanel.h
